--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Nothing+You+Could+Do' rel='stylesheet' type='text/css' />
 	
 	<!-- Homemade CSS -->
+  <link href='/static/css/main.css' rel='stylesheet' type='text/css' />
   <link href='/static/themes/{{ THEME }}/css/main.css' rel='stylesheet' type='text/css' />
 
   <!-- Google Analytics -->
