--- a/templates/project.html
+++ b/templates/project.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load project_extras %}
 
 {% block page_title %}{{ project.name }} - PortFolio{% endblock %}
 {% block title %}Project: {{ project.name }}{% endblock %}
@@ -24,7 +25,7 @@
       {% if subdescription.html_description %}
         {{ subdescription.description|safe }}
       {% else %}
-        <p>{{ subdescription.description }}</p>
+        <p>{{ subdescription.description|url_to_link }}</p>
       {% endif %}
     {% endif %}
     {% if subdescription.image %}
