--- a/templates/project.html
+++ b/templates/project.html
@@ -25,7 +25,7 @@
       {% if subdescription.html_description %}
         {{ subdescription.description|safe }}
       {% else %}
-        <p>{{ subdescription.description|url_to_link }}</p>
+        {{ subdescription.description|escape_project }}
       {% endif %}
     {% endif %}
     {% if subdescription.image %}
