--- a/templates/project.html
+++ b/templates/project.html
@@ -25,11 +25,11 @@
       {% if subdescription.html_description %}
         {{ subdescription.description|safe }}
       {% else %}
-        {{ subdescription.description|escape_project }}
+        {{ subdescription.description|escape_project:subdescription.data_anchor }}
       {% endif %}
     {% endif %}
     {% if subdescription.image %}
-      <p class="image">
+    <p class="image" {% if not subdescription.description %}data-anchor="{{ subdescription.data_anchor }}"{% endif %}>
         <img src="/media/{{ subdescription.image }}" alt="{{ subdescription.legend }}" />
         <br/><span class="legend">{{ subdescription.legend }}</span>
       </p>
