Refactor some models
The previous architecture contained a one to many relation between Project and SubDescription.
SubDescription was able to store: raw text, images or html code without any distinctions

The idea was to create a class Description. It has a one to many link with Project.
Three classes inherit from Description. It makes it possible to have a better control over the data since
constraints can be defined for each kind of Description depending on what it represents.

SubDescription has been kept for this first commit.
If you want to copy your previous DB to the new structure, you can use: 'python manage.py shell'
with the following code:

<code>
from projects.models import *
projects = Project.objects.all()
for p in projects:
    sd_set = p.subdescription_set.all()
    for sd in sd_set:
        if sd.description:
            if sd.html_description:
                HtmlCodeDescription(project=sd.project, data_anchor=sd.data_anchor, description=sd.description).save()
            else:
                RawTextDescription(project=sd.project, data_anchor=sd.data_anchor, description=sd.description).save()
        if sd.image:
            if sd.description:
                ImageDescription(project=sd.project, image=sd.image, legend=sd.legend).save()
            else:
                ImageDescription(project=sd.project, data_anchor=sd.data_anchor, image=sd.image, legend=sd.legend).save()
</code>

--- a/templates/project.html
+++ b/templates/project.html
@@ -20,20 +20,8 @@
     {% endfor %}
   </ul>
   
-  {% for subdescription in project.subdescription_set.all %}
-    {% if subdescription.description %}
-      {% if subdescription.html_description %}
-        {{ subdescription.description|safe }}
-      {% else %}
-        {{ subdescription.description|escape_project:subdescription.data_anchor }}
-      {% endif %}
-    {% endif %}
-    {% if subdescription.image %}
-    <p class="image" {% if not subdescription.description %}data-anchor="{{ subdescription.data_anchor }}"{% endif %}>
-        <img src="/media/{{ subdescription.image }}" alt="{{ subdescription.legend }}" />
-        <br/><span class="legend">{{ subdescription.legend }}</span>
-      </p>
-    {% endif %}
+  {% for description in project.description_set.all %}
+    {{ description|get_safe_html }}
   {% endfor %}
   
   {% if project.download_set.all|length > 0 %}
