--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,10 @@
 	<!-- Homemade CSS -->
   <link href='/static/css/main.css' rel='stylesheet' type='text/css' />
   <link href='/static/themes/{{ THEME }}/css/main.css' rel='stylesheet' type='text/css' />
+  
+  <!-- WavyMenu -->
+	<script src='/static/js-wavymenu/wavy.js'></script>
+  <link href='/static/js-wavymenu/wavy.css' rel='stylesheet' type='text/css' />
 
   <!-- Google Analytics -->
   <script type="text/javascript">
@@ -88,69 +92,15 @@
 </div>
 <script type="text/javascript">
 <!--
-  function scrollToAnchor(aid){
-    var aTag = $(aid);
-    $('html,body').animate({scrollTop: aTag.offset().top},'slow');
-  }
-
-  /* MENU: ANIMATION */
-  
-  var content = $(".content").first()[0];
-  var menu_items = $(".menu-items-right").first()[0];
-  var OFFSET_LEFT_MENU_ITEMS = 10;
-  var OFFSET_TOP_MENU_ITEMS = 10;
-  var isSoftMoveRequired = ! (navigator.userAgent.search("Firefox") > -1);
-  function align_menu_items(soft_move) {
-    menu_items.style.left = (content.offsetLeft + content.clientWidth - menu_items.clientWidth + OFFSET_LEFT_MENU_ITEMS) + "px";
-    if (isSoftMoveRequired && soft_move) {
-      $(menu_items).stop();
-
-      if ($(window).scrollTop() <= content.offsetTop)
-        $(menu_items).animate({opacity: .4, top: (content.offsetTop + OFFSET_TOP_MENU_ITEMS) + "px"}, 250);
-      else
-        $(menu_items).animate({opacity: .4, top: ($(window).scrollTop() + OFFSET_TOP_MENU_ITEMS) + "px"}, 250);
-    } else { // due to discontinuous display on Chrome / 'else' works perfectly with Firefox
-      if ($(window).scrollTop() <= content.offsetTop)
-        menu_items.style.top = (content.offsetTop + OFFSET_TOP_MENU_ITEMS) + "px";
-      else
-        menu_items.style.top = ($(window).scrollTop() + OFFSET_TOP_MENU_ITEMS) + "px";
-    }
-  }
-  
-  /* MENU: CREATION */
-  
-  var id = 0;
-  $(".content [data-anchor]").each(function() {
-      if (! this.getAttribute("id")) {
-        this.setAttribute("id", "auto-generated-id-" + (id++));
-      }
-      if ($(this).hasClass("video")) {
-        $(menu_items).append("<li onclick=\"scrollToAnchor('#" + this.getAttribute("id") + "');\"><img src=\"/static/img/video.png\" /> " + this.getAttribute("data-anchor") + "</li>");
-      } else if ($(this).hasClass("image")) {
-        $(menu_items).append("<li onclick=\"scrollToAnchor('#" + this.getAttribute("id") + "');\"><img src=\"/static/img/image.png\" /> " + this.getAttribute("data-anchor") + "</li>");
-      } else {
-        $(menu_items).append("<li onclick=\"scrollToAnchor('#" + this.getAttribute("id") + "');\">" + this.getAttribute("data-anchor") + "</li>");
-      }
-  });
-  
-  /* MENU: OPACITY */
-  
-  $(".menu-items-right li").hover(function() {
-    $(menu_items).stop();
-    $(menu_items).fadeTo(250, 1.);
-  },
-  function() {
-    $(menu_items).stop();
-    $(menu_items).fadeTo(1000, .4);
-  });
-
-  /* MENU: INITIALISATION & TRIGGERS */
-  
-  $(menu_items).fadeTo(3000, .4);
-  align_menu_items(false);
-
-  $(window).scroll(function() {align_menu_items(true);});
-  $(window).resize(function() {align_menu_items(false);});
+  /* Initialise WavyMenu */
+  var content = $(".content").first();
+  var menu_items = $(".menu-items-right").first();
+  var imgClassDependent = [
+    {className: "video", imgSrc: "/static/img/video.png"},
+    {className: "image", imgSrc: "/static/img/image.png"},
+    {className: "downloads", imgSrc: "/static/img/download.png"},
+  ];
+  createWavyMenu(content, menu_items, imgClassDependent);
 -->
 </script>
 </body>
