Add custom Login page

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
 	
 	<!-- Homemade CSS -->
   <link href='/static/css/main.css' rel='stylesheet' type='text/css' />
+  <link href='/static/css/form.css' rel='stylesheet' type='text/css' />
   <link href='/static/themes/{{ THEME }}/css/main.css' rel='stylesheet' type='text/css' />
   
   <!-- WavyMenu -->
