--- a/static/css/main.css
+++ b/static/css/main.css
@@ -64,7 +64,7 @@ body
 	font-family: 'Nothing You Could Do', cursive;
 }
 
-.header p a:hover
+.header p a:hover, .footer p a:hover
 {
 	color: #000000;
 }
@@ -104,6 +104,15 @@ body
 .footer .qrcodes img
 {
 	width: 64px;
+}
+
+.footer .goto-login
+{
+	position: absolute;
+	right: 20px;
+	bottom: 0px;
+
+	text-align: right;
 }
 
 /* CONTENT */
