Possibility to add content directly from the project page
For the moment only the part to add new descriptions works. Next part to come: modifying description.

--- a/static/css/form.css
+++ b/static/css/form.css
@@ -1,6 +1,7 @@
 form label
 {
 	width: 30%;
+	vertical-align: top;
 }
 
 form label+.controls
@@ -12,5 +13,10 @@ form label+.controls
 form .btn
 {
 	margin-left: 30%;
+}
+
+form .help-block
+{
+	font-size: 0.8em;
 }
 
